--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Sword Battle API",
   "main": "_Server.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node": "^18.5.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {},
   "scripts": {
